--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-pytorch=1.13.0
-torchvision=0.14
-pytorch-cuda=11.6
 tensorboard
 numpy
 tqdm
-gdal
 numba
-krb5
 opencv-python
+scikit-learn
+scikit-image
+sknw
+chardet
